# cpp-template

./: CMakeLists.txt
src/: main.cxx
