cmake_minimum_required(VERSION 2.8.9)
project(target)
aux_source_directory(src SOURCES)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 14)
add_executable(target ${SOURCES})
target_link_libraries(target ${CONAN_LIBS})
